Added and changed some headers. Improved documentation

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -1,6 +1,6 @@
 <!--
- * CS 341: Homework 2
- * Purpose: Creates an updated HTML webpage that has additional JavaScript code added. 
+ * CS 341: Homework 3
+ * Purpose: Creates an updated HTML webpage that has additional JavaScript code added. The JS code has been moved to a separate folder
  * File type: .html file
  * Author: Sean Yang
 -->
